syntax = "proto3";

package auth.v1;

option go_package = "shared/protos/auth/v1;authpbv1";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message SignUpRequest {
    string email = 1;
    string password = 2;
    string full_name = 3;
}

message SignUpResponse {
    string access_token = 1;
    string refresh_token = 2;
}
